# CortexI

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
configs/: logger_config.json
tests/: logger_test.cpp
utils/: logger.cpp  logger.hpp
